--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,3 +22,8 @@ jobs:
         java-version: 14
     - name: Build with Ant
       run: ant -noinput -buildfile world-of-zuul-game.xml
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
