--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=UOM-CloudMethodologies-Class-2020_World-Of-Zuul-TeamProject
 sonar.organization=uom-cloudmethodologies-class-2020
+sonar.exclusions=tests/**, src/**
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=World-Of-Zuul-TeamProject
